[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anywifi"
version = "0.1.0"
description = "Autonomous WiFi pentest CLI — scans nearby networks and attacks the easiest first."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OnurDemir1" }]
keywords = ["wifi", "pentest", "aircrack", "security", "wpa", "wps"]
dependencies = ["rich>=13.0"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/OnurDemir1/AnyWifi"

[project.scripts]
anywifi = "anywifi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anywifi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
